# halo-record

./: .gitignore  AARM.md  ATC.md  CONTRIBUTING.md  LIMITS.md  OWASP.md  README.md  SECURITY.md  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml
examples/policies/: README.md  aiuc-1-starter.json  owasp-starter.json
src/: halo.py
src/halo_record/: __init__.py  access.py  anchor.py  canon.py  capture.py  cli.py  demo.py  export.py  halo-record.schema.json  hook.py  policy.py  record.py  redact.py  report.py  serve.py  session.py  timestamp.py  trace.py  verify.py  witness.py
src/halo_record/integrations/: __init__.py  _common.py  gateway.py  langchain.py  langfuse.py  litellm.py  mcp.py  openai_agents.py  otel.py
tests/: __init__.py  test_access.py  test_anchor.py  test_authority.py  test_canon.py  test_capture_scanning.py  test_concurrency.py  test_console_api.py  test_export.py  test_hook_agent.py  test_integrations.py  test_model_call.py  test_policy.py  test_provenance_fields.py  test_record_verify.py  test_redact.py  test_report.py  test_tenant.py  test_timestamp.py  test_trace.py  test_witness_http.py
