[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "halo-record"
version = "0.2.7"
description = "Open, tamper-evident runtime records for AI agents: the Halo Runtime Record format, with a dependency-free conformance verifier."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Brian Kuan" }]
keywords = ["ai", "agents", "audit", "tamper-evident", "attestation", "compliance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Security",
  "Topic :: System :: Logging",
]
dependencies = []

[project.scripts]
halo = "halo_record.cli:main"

[project.urls]
Homepage = "https://github.com/bkuan001/halo-record"
Repository = "https://github.com/bkuan001/halo-record"
Issues = "https://github.com/bkuan001/halo-record/issues"

[tool.setuptools]
# Ship the top-level ``halo`` shim alongside the package so the hero snippet
# ``from halo import trace`` resolves from a plain ``pip install``.
py-modules = ["halo"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
halo_record = ["*.json"]
